--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ html,body {
 .toggle-btn {
   width: auto;
   min-width: 0;
-  padding: 0 20px;
+  padding: 0 10px;
   font-size: 14px;
   white-space: nowrap;
 border: 1px solid #fff;
@@ -116,7 +116,7 @@ border: 1px solid #fff;
   /*background-color: rgba(255,255,255,0.8) !important;
   color: black !important;*/
   font-weight: 600;
-  font-style:underline;
+  text-decoration:underline;
 }
 
 
